--- a/react_inline_styling/task_1/dashboard/package.json
+++ b/react_inline_styling/task_1/dashboard/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "aphrodite": "^2.4.0",
     "eslint-plugin-jest": "^28.9.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
